--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-theme-switch": "^0.1.4",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
