--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-theme-switch": "^0.1.4",
     "react-transition-group": "^2.4.0",
