--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "nodemailer": "^4.6.7"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
