--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
