--- a/client/package.json
+++ b/client/package.json
@@ -26,5 +26,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "host": "0.0.0.0"
 }
